syntax = "proto3";

option go_package = "github.com/peppydays/grpc-microservices-in-go/idl/proto/payment";

message CreatePaymentRequest {
	float price = 1;
}

message CreatePaymentResponse {
	int64 bill_id = 1;
}

service PaymentService {
    rpc Create(CreatePaymentRequest) returns (CreatePaymentResponse) {}
}
